--- a/index.html
+++ b/index.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abdul Rashid</title>
+    <script src="https://kit.fontawesome.com/0d657c1c48.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
-    <h1>Hello world</h1>
-    
+    <header class="header">
+        <a href="#" class="logo">Abdul Rashid</a>
+
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Skills</a>
+            <a href="#">Projects</a>
+            <a href="#">Statics</a>
+            <a href="#">Contacts</a>
+
+            <div class="download">
+                <i class="fa-regular fa-circle-down"></i>
+                <a target="_blank" class="chakra-link chakra-button css-11vdrbp" href="/Abdul-Rashid-resume.pdf"
+                    download>Resume</a>
+            </div>
+        </nav>
+
+
+    </header>
+
+
+    <section class="home">
+        <div class="home-content">
+            <div class="hi">
+                <img src="https://fahisayub.github.io/static/media/hi.595c27e01407f4e94ce4.png" alt="">
+            </div>
+            <hr id="horizontal-line">
+            <p class="intro-text-a">Hi I'm</p>
+            <p class="intro-text-b">Abdul Rashid</p>
+            <p class="intro-text-c">Java Backend Developer</p>
+        </div>
+
+        <div class="profession-container">
+            <div class="profession-box">
+
+            </div>
+        </div>
+
+        <div class="profile-photo-des">
+            <img src="./20210530_193329.jpg" alt="">
+        </div>
+    </section>
+
+    <div class="card-about-me">
+        <div class="inner-card">
+            <h3>About Me</h3>
+            <hr>
+            <p>
+                A self-motivated, hard-working, and ambitious Java
+                Backend Developer. Problem-solving mindset and the
+                ability to perform well in collaboration.
+            </p>
+            <div class="contact">
+                <div class="contact-address">
+                    <i class="fa-solid fa-location-dot"></i>
+                    Hazaribagh, Jharkhand
+                </div>
+                <div class="contact-email">
+                    <i class="fa-solid fa-envelope"></i>
+                    abdulrashid987655@gmail.com
+                </div>
+                <div class="contact-mobile">
+                    <i class="fa-solid fa-phone"></i>
+                    +91 8340592769
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card1">
+
+    </div>
+
 </body>
+
 </html>
