--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 <script src="https://kit.fontawesome.com/00b3499e31.js" crossorigin="anonymous"></script>
 
 </script>
-<script>
+<!-- <script>
    GitHubCalendar(".calendar", "abdulrashid06");
 
    // or enable responsive functionality:
@@ -640,7 +640,7 @@
          return fetch(`https://your-proxy.com/github?user=${username}`)
       }
    }).then(r => r.text())
-</script>
+</script> -->
 <script>
    $(window).scroll(function () {
       $('.fixed-navbar').toggleClass('scrolled', $(this).scrollTop() > 100);
