--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                <div class="row align-items-center">
                   <div class="col-xl-6 col-lg-6 col-12">
                      <div class="wpo-static-hero-inner">
-                        <div data-swiper-parallax="300" class="slide-title">
+                        <div data-swiper-parallax="300" class="slide-title" id="user-detail-name">
                            <h2><span>Hello,</span>I am Abdul Rashid.</h2>
                         </div>
                         <div data-swiper-parallax="300" class="slide-sub-title">
@@ -178,7 +178,7 @@
 
 
 
-   <section class="ftco-section resume-section pb-4 ftco-about img ftco-section" id="about-section">
+   <section class="ftco-section resume-section pb-4 ftco-about img ftco-section" id="about section">
       <div class="container">
          <div class="row justify-content-center pt-5 pb-5">
             <div class="col-md-10 heading-section text-center ftco-animate fadeInUp ftco-animated">
@@ -193,14 +193,14 @@
             <div class="col-md-6 col-lg-5 d-flex">
                <div class="img-about img d-flex align-items-stretch">
                   <div class="overlay"></div>
-                  <div class="img d-flex align-self-stretch align-items-center"
-                     style="background-image:url(images/profile.jpg);">
+                  <div class="img d-flex align-self-stretch align-items-center home-img"
+                     style="background-image:url(images/profile.jpg);" id="">
                   </div>
                </div>
             </div>
-            <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+            <div class="col-md-6 col-lg-7 pl-lg-5 pb-5" id="user-detail-intro">
                <div class="row justify-content-start pb-3">
-                  <div class="col-md-12 heading-section ftco-animate">
+                  <div class="col-md-12 heading-section ftco-animate" >
                      <!-- <h1 class="big">About</h1> -->
                      <!-- <h2 class="mb-4">About Me</h2> -->
                      <p style="margin-top: 10%;">An Aspiring JAVA Back-end Developer, strong in design and integration
@@ -330,7 +330,7 @@
    </div>
 
 
-   <section class="wpo-blog-section portfolio section-padding" id="portfolio">
+   <section class="wpo-blog-section portfolio section-padding" id="projects">
       <div class="container">
          <div class="row justify-content-center pt-5 pb-5">
             <div class="col-md-10 heading-section text-center ftco-animate fadeInUp ftco-animated">
@@ -342,66 +342,68 @@
             </div>
          </div>
          <div class="row portfolio-container">
-            <div class="col-lg-4 col-md-6 pb-2 pt-2 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 pb-2 pt-2 portfolio-item filter-app project-card">
                <div class="portfolio-wrap"> <img src="./images/Anthropologir_outlook.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                     <h4>Anthropologie Clone</h4>
-                     <p>HTML | CSS | JS</p>
+                     <h4 class="project-title">Anthropologie Clone</h4>
+                     <p class="project-tech-stack">HTML | CSS | JS</p>
                      <div class="portfolio-links">
                         <a target="_blank" href="https://github.com/abdulrashid06/mere-coast-376"
-                           class="portfolio-lightbox">
+                           class="portfolio-lightbox project-github-link">
                            <i class="fa-brands fa-github"></i>
                         </a>
-                        <a target="_blank" href="https://lucky-beijinho-3574d4.netlify.app/"><i
+                        <a target="_blank" href="https://lucky-beijinho-3574d4.netlify.app/" class="project-deployed-link"><i
                               class="fa-solid fa-link"></i>
                         </a>
                      </div>
                   </div>
                </div>
-               <div class="description ">
+               <div class="project-description ">
                   <p>
                      Anthroplogie is an E-commerce store. Which deals in women fashion clothing, accessories and home
                      furniture.
                   </p>
                </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-2 pt-2 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 pb-2 pt-2 portfolio-item filter-web project-card">
                <div class="portfolio-wrap"> <img src="./images/daily_objects_outlook.jpeg" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                     <h4>Clone of Daily Objects</h4>
-                     <p>HTML | CSS | JS</p>
+                     <h4 class="project-title">Clone of Daily Objects</h4>
+                     <p class="project-tech-stack">HTML | CSS | JS</p>
                      <div class="portfolio-links">
                         <a target="_blank" href="https://github.com/abdulrashid06/Daily-Objects"
-                           class="portfolio-lightbox" title="Web 3">
+                           class="portfolio-lightbox project-github-link" title="Web 3">
                            <i class="fa-brands fa-github"></i>
                         </a>
                         <a target="_blank" href="https://gorgeous-bunny-1780ec.netlify.app/index.html"
-                           class="portfolio-details-lightbox">
+                           class="portfolio-details-lightbox project-deployed-link">
                            <i class="fa-solid fa-link"></i>
                         </a>
                      </div>
                   </div>
                </div>
-               <div class="description">
+               <div class="project-description">
                   <p>
                      Daily Objects is a E-commerce company which sells
                      designed and customized accessories.
                   </p>
                </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-2 pt-2 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 pb-2 pt-2 portfolio-item filter-card project-card">
                <div class="portfolio-wrap"> <img src="./images/student_registeration.png" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                     <h4>Outlook India</h4>
-                     <p>HTML | CSS | JS</p>
+                     <h4 class="project-title">Outlook India</h4>
+                     <p class="project-tech-stack">HTML | CSS | JS</p>
                      <div class="portfolio-links"> <a target="_blank"
                            href="https://github.com/Rohit6789/-humble-offer-6148"><i
-                              class="fa-brands fa-github"></i></a> <a target="_blank"
-                           href="https://polite-cannoli-bfad9b.netlify.app/" class="portfolio-details-lightbox"><i
+                              class="fa-brands fa-github project-github-link"></i>
+                           </a> 
+                           <a target="_blank"
+                           href="https://polite-cannoli-bfad9b.netlify.app/" class="portfolio-details-lightbox project-deployed-link"><i
                               class="fa-solid fa-link"></i></a></div>
                   </div>
                </div>
-               <div class="description">
+               <div class="project-description">
                   This project is a console based project which is all about the process of the registration system of
                   college or institute is working.
                </div>
@@ -482,7 +484,7 @@
       </div>
    </section>
 
-   <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+   <section class="ftco-section contact-section ftco-no-pb" id="contact">
       <div class="container ">
          <div class="row justify-content-center mb-5 pb-3 mb-sm-5">
             <div class="col-md-7 heading-section text-center ftco-animate fadeInUp ftco-animated">
@@ -527,7 +529,7 @@
                   </div>
                   <div class="col col-lg-6 col-md-12 col-12">
                      <div class="row">
-                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated">
+                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated" id="contact-linkedin">
                            <div class="align-self-stretch box p-4 text-center">
                               <a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" target="_blank">
                                  <div class="icon d-flex align-items-center justify-content-center">
@@ -537,7 +539,7 @@
                               </a>
                            </div>
                         </div>
-                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated">
+                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated" id="contact-phone">
                            <div class="align-self-stretch box p-4 text-center">
                               <a href="tel:+918340592769">
                                  <div class="icon d-flex align-items-center justify-content-center">
@@ -549,7 +551,7 @@
                         </div>
                         <!-- </div>
                      <div class="row"> -->
-                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated">
+                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated" id="contact-email">
                            <div class="align-self-stretch box p-4 text-center">
                               <a href="mailto:abdulrashid987655@gmail.com">
                                  <div class="icon d-flex align-items-center justify-content-center email-icon">
@@ -559,7 +561,7 @@
                               </a>
                            </div>
                         </div>
-                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated">
+                        <div class="col-md-4 col-lg-6 col-4 d-flex ftco-animate fadeInUp ftco-animated" id="contact-github">
                            <div class="align-self-stretch box p-4 text-center">
                               <a href="https://github.com/abdulrashid06" target="_blank">
                                  <div class="icon d-flex align-items-center justify-content-center">
