--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <div id="stat">
         <div>
           <img class="ht1" id="github-stats-card"
-            src='https://github-readme-stats.vercel.app/api?username=Shahid0143&count_private=true&show_icons=true&theme=dark'>
+            src='https://github-readme-stats.vercel.app/api?username=abdulrashid06&count_private=true&show_icons=true&theme=dark'>
         </div>
         <div>
           <img class="ht1" id="github-streak-stats" src='https://github-readme-streak-stats.herokuapp.com/?user=abdulrashid06&theme=dark'>
