--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li>
         <!-- <button id="resume-button-1" class="nav-link resume"
           onclick="window.open('https://drive.google.com/file/d/1iJMHdZ6QeGq9yw8pHQkvRwKlUmAss_no/view?usp=share_link')">
-          <a id="resume-link-1" href="./images/Fehmida_Shaikh_Resume.pdf" download>Resume</a>
+          <a id="resume-link-1" href="/Abdul-Rashid-Resume-1.pdf" download>Resume</a>
         </button> -->
       </li>
 
@@ -59,8 +59,8 @@
 
     <div id="resume">
       <button id="resume-button-1" class="nav-link resume"
-        onclick="window.open('https://drive.google.com/file/d/1iJMHdZ6QeGq9yw8pHQkvRwKlUmAss_no/view?usp=share_link')">
-        <a id="resume-link-1" href="./images/Fehmida_Shaikh_Resume.pdf" download>Resume</a>
+        onclick="window.open('https://drive.google.com/file/d/12OuXx-vO7aqq1Bj1kuTGBOw5o7GJnNRB/view?usp=sharing')">
+        <a id="resume-link-1" href="/Abdul-Rashid-Resume-1.pdf" download>Resume</a>
       </button>
     </div>
 
@@ -136,7 +136,7 @@
 
         <p id="user-detail-intro" style="font-size:20px ;">An Aspiring JAVA Back-end Developer, strong in design and
           integration
-          with intuitive problem-solving skills.
+          with intuitive problem-solving skills. I have knowledge in programming languages such as HTML, CSS, JavaScript, JAVA, Hibernate, springboot.
           I have ability to translate business requirements into technical solutions.</p>
         <br>
 
@@ -495,20 +495,22 @@
       <p>Fill the form to connect if any query <i class="fas fa-smile"></i>
       </p>
       <div class="list">
-        <li><a href="#" id="contact-phone">+91-8340592769</a></li>
-        <li><a href="www.gmail.com" id="contact-email"> abdulrashid987655@gmail.com </a></li>
-        <li><a href="https://www.linkedin.com/in/ft-fehmida-shaikh-6308a719a/" id="contact-linkedin"> Linkedin : Abdul Rashid</a></li>
+        <li><a href="tel:+918340592769" id="contact-phone"><i class="fa-solid fa-phone"></i> &nbsp; +91-8340592769</a></li>
+        <li><a href="mailto:abdulrashid987655@gmail.com" id="contact-email"><i class="fa-solid fa-envelope"></i> &nbsp; abdulrashid987655@gmail.com </a></li>
+        <li><a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" id="contact-linkedin"><i class="fa-brands fa-linkedin-in"></i> &nbsp; abdul-rashid</a></li>
+        <li><a href="https://github.com/abdulrashid06" id="contact-github"><i class="fa-brands fa-github"></i> &nbsp; abdulrashid06</a></li>
+        <li><a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" id="contact-linkedin"><i class="fa-brands fa-instagram"></i> &nbsp; Abdul Rashid</a></li>
         <!-- <li><a href="#">linkedin</a></li> -->
       </div>
-      <div class="contact-icons">
-        <a href="https://www.linkedin.com/in/ft-fehmida-shaikh-6308a719a/ " target="_blank" id="contact-linkedin"><i
+      <!-- <div class="contact-icons">
+        <a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" target="_blank" id="contact-linkedin"><i
             class='bx bxl-linkedin'></i></a>
-        <!-- <a href="https://www.youtube.com/channel/UCigoLzQqrPGcDH0eOQET9QA" target="_blank"><i
-            class='bx bxl-youtube'></i></a> -->
+        <a href="https://www.youtube.com/channel/UCigoLzQqrPGcDH0eOQET9QA" target="_blank"><i
+            class='bx bxl-youtube'></i></a>
         <a id="contact-github" href="https://github.com/abdulrashid06" target="_blank"><i class='bx bxl-github'></i></a>
-        <!-- <a href="#"><i class='bx bxl-e'></i></a> -->
+        <a href="#"><i class='bx bxl-e'></i></a>
 
-      </div>
+      </div> -->
 
     </div>
     <div class="contact-form">
