--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </div>
 
 
-      <div>
+      <div class="react-activity-calendar">
         <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
 
