--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="resume">
       <button id="resume-button-1" class="nav-link resume"
         onclick="window.open('https://drive.google.com/file/d/12OuXx-vO7aqq1Bj1kuTGBOw5o7GJnNRB/view?usp=sharing')">
-        <a id="resume-link-1" href="/Abdul-Rashid-Resume-1.pdf" download>Resume</a>
+        <a id="resume-link-1" href="/Abdul-Rashid-Resume-02.pdf" download>Resume</a>
       </button>
     </div>
 
@@ -88,7 +88,7 @@
       <div>
         <button id="resume-button-2" class="nav-link resume"
           onclick="window.open('https://drive.google.com/file/d/12OuXx-vO7aqq1Bj1kuTGBOw5o7GJnNRB/view?usp=sharing')">
-          <a id="resume-link-2" href="/Abdul-Rashid-Resume-1.pdf" download>Resume</a>
+          <a id="resume-link-2" href="/Abdul-Rashid-Resume-02.pdf" download>Resume</a>
         </button>
       </div>
     </div>
@@ -450,7 +450,7 @@
 
 
         <div class="project-card">
-          <img  src="./images/daily_objects_outlook.jpeg" alt="" />
+          <img  src="./images/billpay.png" alt="" />
           <br>
           <h2 class="project-title">Electricity Bill Payment System</h2>
           <p class="project-description">
