--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="resume">
       <button id="resume-button-1" class="nav-link resume"
         onclick="window.open('https://drive.google.com/file/d/1wJQjMW6UizNqjsdT_GCoOAdGHz9S8ypn/view?usp=sharing')">
-        <a id="resume-link-1" href="/Abdul-Rashid-Resume-02.pdf" download>Resume</a>
+        <a id="resume-link-1" href="/Abdul-Rashid-Resume-01.pdf" download>Resume</a>
       </button>
     </div>
 
@@ -88,7 +88,7 @@
       <div>
         <button id="resume-button-2" class="nav-link resume"
           onclick="window.open('https://drive.google.com/file/d/1wJQjMW6UizNqjsdT_GCoOAdGHz9S8ypn/view?usp=sharing')">
-          <a id="resume-link-2" href="/Abdul-Rashid-Resume-02.pdf" download>Resume</a>
+          <a id="resume-link-2" href="/Abdul-Rashid-Resume-01.pdf" download>Resume</a>
         </button>
       </div>
     </div>
@@ -134,10 +134,7 @@
         <!-- <br> -->
 
 
-        <p id="user-detail-intro" style="font-size:20px ;">An Aspiring JAVA Back-end Developer, strong in design and
-          integration
-          with intuitive problem-solving skills. I have knowledge in programming languages such as HTML, CSS, JavaScript, JAVA, Hibernate, springboot.
-          I have ability to translate business requirements into technical solutions.</p>
+        <p id="user-detail-intro" style="font-size:20px ;">As an aspiring Java back-end developer, I possess strong skills in design and integration, coupled with intuitive problem-solving abilities. I have knowledge of programming languages such as HTML, CSS, JavaScript, Java, Hibernate, and Spring Boot. Additionally, I have the ability to translate business requirements into technical solutions.</p>
         <br>
 
         <ul class="about-info mt-4 px-md-0 px-2">
@@ -442,7 +439,7 @@
             </button>
             <button>
               <a class="project-deployed-link" target="_blank"
-                href="https://gorgeous-bunny-1780ec.netlify.app/index.html">Live</a><i
+                href="https://drive.google.com/file/d/1xfBS-Sf10YcJql6SoMMONZeJRN9UdiBY/view?usp=sharing">Live</a><i
                 class="fa-solid fa-arrow-up-right-from-square"></i>
             </button>
           </div>
@@ -469,7 +466,7 @@
             </button>
             <button>
               <a class="project-deployed-link" target="_blank"
-                href="https://gorgeous-bunny-1780ec.netlify.app/index.html">Live</a><i
+                href="https://drive.google.com/file/d/162TkD4nsETn5547I7CvhOKYRfrCGvOHl/view?usp=sharing">Live</a><i
                 class="fa-solid fa-arrow-up-right-from-square"></i>
             </button>
           </div>
