updated project video link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <!-- <br> -->
 
 
-        <p id="user-detail-intro" style="font-size:20px ;">As an aspiring Java back-end developer, I possess strong skills in design and integration, coupled with intuitive problem-solving abilities. I have knowledge of programming languages such as HTML, CSS, JavaScript, Java, Hibernate, and Spring Boot. Additionally, I have the ability to translate business requirements into technical solutions.</p>
+        <p id="user-detail-intro" style="font-size:20px ;">Aspiring to become a Java back-end developer, strong skills in design and integration are coupled with intuitive problem-solving abilities. Proficient in programming languages such as HTML, CSS, JavaScript, Java, Hibernate, and Spring Boot, with the capability to translate business requirements into technical solutions.</p>
         <br>
 
         <ul class="about-info mt-4 px-md-0 px-2">
