updated project video link

--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
               <div class="icon-3 floating-item"><img src="image/icons8-css3.svg" alt=""> -->
         </div>
 
-        
+
         <!-- <div class="project floating-item">
                  <div class="icon"><i class="fa-regular fa-circle-check"></i></div>
                  <div class="p-text">
+                    <h3><span data-count="1500">3</span>+</h3>
+                    <p>Complete Project</p>
                     <h3><span data-count="1500">3</span>+</h3>
                     <p>Complete Project</p>
                  </div>
@@ -136,7 +138,10 @@
         <!-- <br> -->
 
 
-        <p id="user-detail-intro" style="font-size:20px ;">Aspiring to become a Java back-end developer, strong skills in design and integration are coupled with intuitive problem-solving abilities. Proficient in programming languages such as HTML, CSS, JavaScript, Java, Hibernate, and Spring Boot, with the capability to translate business requirements into technical solutions.</p>
+        <p id="user-detail-intro" style="font-size:20px ;">Aspiring to become a Java back-end developer, strong skills
+          in design and integration are coupled with intuitive problem-solving abilities. Proficient in programming
+          languages such as HTML, CSS, JavaScript, Java, Hibernate, and Spring Boot, with the capability to translate
+          business requirements into technical solutions.</p>
         <br>
 
         <ul class="about-info mt-4 px-md-0 px-2">
@@ -321,7 +326,8 @@
             src='https://github-readme-stats.vercel.app/api?username=abdulrashid06&count_private=true&show_icons=true&theme=dark'>
         </div>
         <div>
-          <img class="ht1" id="github-streak-stats" src='https://github-readme-streak-stats.herokuapp.com/?user=abdulrashid06&theme=dark'>
+          <img class="ht1" id="github-streak-stats"
+            src='https://github-readme-streak-stats.herokuapp.com/?user=abdulrashid06&theme=dark'>
         </div>
         <div>
           <img class="ht1" id="github-top-langs"
@@ -384,7 +390,8 @@
                 href="https://github.com/abdulrashid06/Daily-Objects">Code</a><i class="fa-brands fa-github"></i>
             </button>
             <button>
-              <a class="project-deployed-link" target="_blank" href="https://gorgeous-bunny-1780ec.netlify.app/index.html">Live</a><i
+              <a class="project-deployed-link" target="_blank"
+                href="https://gorgeous-bunny-1780ec.netlify.app/index.html">Live</a><i
                 class="fa-solid fa-arrow-up-right-from-square"></i>
             </button>
           </div>
@@ -396,7 +403,8 @@
           <br>
           <h2 class="project-title">Anthropologie - Clone</h2>
           <p class="project-description">
-            An E-commerce website for women's and house-holds item of new fashions and having many varities like bridal, wedding, dresses, home furniture etc.
+            An E-commerce website for women's and house-holds item of new fashions and having many varities like bridal,
+            wedding, dresses, home furniture etc.
           </p>
           <h4>An Indiviudal Project executed within 5 days.</h4>
           <p class="project-tech-stack">
@@ -408,7 +416,8 @@
                 href="https://github.com/abdulrashid06/mere-coast-376">Code</a><i class="fa-brands fa-github"></i>
             </button>
             <button>
-              <a class="project-deployed-link" target="_blank" href="https://lucky-beijinho-3574d4.netlify.app/">Live</a><i
+              <a class="project-deployed-link" target="_blank"
+                href="https://lucky-beijinho-3574d4.netlify.app/">Live</a><i
                 class="fa-solid fa-arrow-up-right-from-square"></i>
             </button>
           </div>
@@ -420,8 +429,9 @@
           <br>
           <h2 class="project-title">Student Registration System</h2>
           <p class="project-description">
-            This project is a console based project which is all about the process of the registration system of college or institute is working.
-          <!-- <ul>
+            This project is a console based project which is all about the process of the registration system of college
+            or institute is working.
+            <!-- <ul>
             <li>Features<ul>
                 <li>Register a crime</li>
                 <li>Add new Police Station</li>
@@ -437,7 +447,8 @@
           <div class="buttons">
             <button>
               <a class="project-github-link" target="_blank"
-                href="https://github.com/abdulrashid06/Student-Automated-Registration-System">Code</a><i class="fa-brands fa-github"></i>
+                href="https://github.com/abdulrashid06/Student-Automated-Registration-System">Code</a><i
+                class="fa-brands fa-github"></i>
             </button>
             <button>
               <a class="project-deployed-link" target="_blank"
@@ -449,11 +460,12 @@
 
 
         <div class="project-card">
-          <img  src="./images/billpay.png" alt="" />
+          <img src="./images/billpay.png" alt="" />
           <br>
           <h2 class="project-title">Electricity Bill Payment System</h2>
           <p class="project-description">
-            BILLPAY :- Electricity Bill Payment System (EBPS) is a software which is used to provide a payment service to consumers so that they pay all their pending bills comfortably from home.
+            BILLPAY :- Electricity Bill Payment System (EBPS) is a software which is used to provide a payment service
+            to consumers so that they pay all their pending bills comfortably from home.
 
           </p>
           <h4>A Collborative Project built by team of 4 members within 5 days.</h4>
@@ -464,7 +476,8 @@
           <div class="buttons">
             <button>
               <a class="project-github-link" target="_blank"
-                href="https://github.com/abdulrashid06/Student-Automated-Registration-System">Code</a><i class="fa-brands fa-github"></i>
+                href="https://github.com/abdulrashid06/Student-Automated-Registration-System">Code</a><i
+                class="fa-brands fa-github"></i>
             </button>
             <button>
               <a class="project-deployed-link" target="_blank"
@@ -475,7 +488,7 @@
         </div>
 
 
-        
+
 
 
       </div>
@@ -494,11 +507,16 @@
       <p>Fill the form to connect if any query <i class="fas fa-smile"></i>
       </p>
       <div class="list">
-        <li><a href="tel:+918340592769" id="contact-phone"><i class="fa-solid fa-phone"></i> &nbsp; +91-8340592769</a></li>
-        <li><a href="mailto:abdulrashid987655@gmail.com" id="contact-email"><i class="fa-solid fa-envelope"></i> &nbsp; abdulrashid987655@gmail.com </a></li>
-        <li><a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" id="contact-linkedin"><i class="fa-brands fa-linkedin-in"></i> &nbsp; abdul-rashid</a></li>
-        <li><a href="https://github.com/abdulrashid06" id="contact-github"><i class="fa-brands fa-github"></i> &nbsp; abdulrashid06</a></li>
-        <li><a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" id="contact-linkedin"><i class="fa-brands fa-instagram"></i> &nbsp; Abdul Rashid</a></li>
+        <li><a href="tel:+918340592769" id="contact-phone"><i class="fa-solid fa-phone"></i> &nbsp; +91-8340592769</a>
+        </li>
+        <li><a href="mailto:abdulrashid987655@gmail.com" id="contact-email"><i class="fa-solid fa-envelope"></i> &nbsp;
+            abdulrashid987655@gmail.com </a></li>
+        <li><a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" id="contact-linkedin"><i
+              class="fa-brands fa-linkedin-in"></i> &nbsp; abdul-rashid</a></li>
+        <li><a href="https://github.com/abdulrashid06" id="contact-github"><i class="fa-brands fa-github"></i> &nbsp;
+            abdulrashid06</a></li>
+        <li><a href="https://www.linkedin.com/in/abdul-rashid-8184901aa/" id="contact-linkedin"><i
+              class="fa-brands fa-instagram"></i> &nbsp; Abdul Rashid</a></li>
         <!-- <li><a href="#">linkedin</a></li> -->
       </div>
       <!-- <div class="contact-icons">
