all the pages are made responsive

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <div id="resume">
       <button id="resume-button-1" class="nav-link resume"
-        onclick="window.open('https://drive.google.com/file/d/1TOhtia-QNB_SbSSG34dt6tXsjg4-43Su/view?usp=sharing')">
-        <a id="resume-link-1" href="/Abdul-Rashid-Resume-01.pdf" download>Resume</a>
+        onclick="window.open('https://drive.google.com/file/d/1T4gNnPzvLj3Z5IGFEnkrZw_jPpU4_DqC/view?usp=sharing')">
+        <a id="resume-link-1" href="/Abdul-Rashid-Resume-02.pdf" download>Resume</a>
       </button>
     </div>
 
@@ -76,19 +76,19 @@
 
     <div id="nav-link-home" class="nav-link home">
 
-      <div class="text-1" style="font-size: 50px; font-weight: 700; color: yellow;">Hello,</div>
-      <div id="user-detail-name" style="font-size: 42px;">
+      <div class="text-1"  style = "font-weight: 700; color: yellow;">Hello,</div>
+      <div id="user-detail-name" >
         <h2>I AM
           Abdul <br>Rashid </h2>
       </div>
-      <div class="text-3" style="font-size: 40px; color: red;"><span class="typing"
-          style="font-size: 40px; color: red;"></span></h2>
+      <div class="text-3" style=" color: red;"><span class="typing"
+          style=" color: red;"></span></h2>
       </div>
       <br><br>
       <div>
         <button id="resume-button-2" class="nav-link resume"
-          onclick="window.open('https://drive.google.com/file/d/1TOhtia-QNB_SbSSG34dt6tXsjg4-43Su/view?usp=sharing')">
-          <a id="resume-link-2" href="/Abdul-Rashid-Resume-01.pdf" download>Resume</a>
+          onclick="window.open('https://drive.google.com/file/d/1T4gNnPzvLj3Z5IGFEnkrZw_jPpU4_DqC/view?usp=sharing')">
+          <a id="resume-link-2" href="/Abdul-Rashid-Resume-02.pdf" download>Resume</a>
         </button>
       </div>
     </div>
@@ -125,7 +125,7 @@
   <!-- --------about section design  ------->
   <section class="about section" id="about">
 
-    <h2 style="font-size: 50px;">About Me</h2>
+    <h2 ">About Me</h2>
     <div class="about-me">
 
       <div class="about-img">
@@ -138,20 +138,20 @@
         <!-- <br> -->
 
 
-        <p id="user-detail-intro" style="font-size:20px ;">Aspiring to become a Java back-end developer, strong skills
+        <p id="user-detail-intro" ">A Java back-end developer, strong skills
           in design and integration are coupled with intuitive problem-solving abilities. Proficient in programming
           languages such as HTML, CSS, JavaScript, Java, Hibernate, and Spring Boot, with the capability to translate
           business requirements into technical solutions.</p>
         <br>
 
-        <ul class="about-info mt-4 px-md-0 px-2">
+        <!-- <ul class="about-info mt-4 px-md-0 px-2">
           <li class="d-flex"><span>Name:</span> <span>Abdul Rashid</span></li>
           <li class="d-flex"><span>Date of birth:</span> <span>November,06,2000</span></li>
           <li class="d-flex"><span>Address:</span> <span>Jharkhand, Hazaribagh</span></li>
           <li class="d-flex"><span>Pin code:</span> <span>825312</span></li>
 
           <li class="d-flex"><span>Phone: </span> <span>+91-8340592769</span></li>
-        </ul>
+        </ul> -->
 
       </div>
     </div>
